# GyroCube-Prototype

./: README.md
cube/: .gitignore  CMakeLists.txt  README.md  load.sh  main.cpp
cube/inc/actuator/: NeoPixel.h  VibrationMotor.h
cube/inc/interface/: XBee.h  i2c.h
cube/inc/sensor/: Accelerometer.h  Hih6020.h
cube/inc/state_machine/: Event.h  Gyrocube.h
cube/src/: examples.cpp  main.cpp
cube/src/actuator/: NeoPixel.cpp  VibrationMotor.cpp
cube/src/interface/: XBee.cpp  i2c.cpp
cube/src/sensor/: Accelerometer.cpp  Hih6020.cpp
cube/src/state_machine/: Gyrocube.cpp
hub/: README.md
hub/.mcuxpressoide_packages_support/: info.properties
hub/embedded-C/Debug/: makefile  sources.mk
hub/embedded-C/Debug/MQTTPacket/src/: subdir.mk
hub/hub_main/: .cproject  .project
hub/hub_main/src/: main.cpp
hub/hub_main/src/mqtt/: MQTT.cpp
hub/hub_main/src/uart/: LpcUart.cpp
hub/lpc_board_nxp_lpcxpresso_1549/: .cproject
hub/lpc_chip_15xx/: .cproject
web/: README.md  app.js  package-lock.json  package.json  tester.js
web/config/: auth.js  keys.js  passport.js
web/models/: Users.js
web/public/js/: cube.js  cube_display_homepage.js  cube_display_settings.js  handler.js  helper.js  sockets.js
web/routes/: cube.js  login.js
web/views/: cube.ejs  cube_1_settings.ejs  cube_settings.ejs  homepage.ejs  login.ejs
